actualización de aplicación general

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,7 @@
-<div class="container">
+<!-- x  <app-navbar></app-navbar> -->
+<router-outlet></router-outlet>
+
+<!-- <div class="container">
   <div class="card text-center">
   <div class="card-header">
    <b>LOGIN</b>
@@ -17,4 +20,4 @@
 
   </div>
 </div>
-</div>
+</div> -->
