--- a/src/app/component/dificultad/dificultad.component.html
+++ b/src/app/component/dificultad/dificultad.component.html
@@ -1,7 +1,7 @@
 <app-navbar></app-navbar>
-<div>
+<div >
 <p>dificultad works!</p>
-<button (click)="enviar('facil')">aqui</button>
-<button (click)="enviar('medio')">aqui</button>
-<button (click)="enviar('dificil')">aqui</button>
+<button  class="btn btn-outline-danger form-control m-2  btn-block" data-toggle="collapse" type="button" (click)="enviar('facil')">aqui</button>
+<button  class="btn btn-outline-danger form-control m-2  btn-block" data-toggle="collapse" type="button" (click)="enviar('medio')">aqui</button>
+<button  class="btn btn-outline-danger form-control m-2  btn-block" data-toggle="collapse" type="button" (click)="enviar('dificil')">aqui</button>
 </div>
