--- a/src/app/component/navar/navar.component.html
+++ b/src/app/component/navar/navar.component.html
@@ -1,21 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" >
 <head>
-  <title>Bootstrap Example</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 </head>
-<body >
+<body  >
 
-<nav class="navbar navbar-inverse">
-  <div class="container-fluid">
+<nav class="navbar navbar-inverse navbar-expand-sm " data-toggle="collapse" >
+  <div class="container-fluid navbar-expand-sm  collapse navbar-collapse">
     <div class="navbar-header">
-      <a class="navbar-brand" href="#">Learning Together</a>
+      <a class="navbar-brand aling-right">Learning Together</a>
     </div>
-    <ul class="nav navbar-nav">
+    <ul class="nav navbar-nav ">
       <!-- <li class="active"><a href="#">Home</a></li> -->
       <!-- <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Page 1 <span class="caret"></span></a>
         <ul class="dropdown-menu">
@@ -23,14 +22,16 @@
           <li><a href="#">Page 1-2</a></li>
           <li><a href="#">Page 1-3</a></li>
         </ul>
-      </li> --><button class="progressier-install-button btn btn-primary btn-block">Instalar</button>
+      </li> --><button data-toggle="collapse" class="progressier-install-button btn btn-primary btn-block">Instalar</button>
       <!-- <BUtton class="btn btn-primary btn-block">Instalar</BUtton> -->
       <!-- <li><a href="#"></a></li> -->
     </ul>
-    <ul class="nav navbar-nav navbar-right">
+    <ul class="nav navbar-nav navbar-right collapse navbar-collapse">
       <li><a href="/register"><span class="glyphicon glyphicon-user"></span> Registro</a></li>
       <li><a href="/login"><span class="glyphicon glyphicon-log-in"></span> Iniciar Sesion</a></li>
     </ul>
+
+
   </div>
 </nav>
 <!--
