--- a/src/app/component/preguntas/preguntas.component.html
+++ b/src/app/component/preguntas/preguntas.component.html
@@ -2,9 +2,9 @@
 <app-navbar></app-navbar>
 <div *ngFor="let t of preguntas" >
   <h1>{{t.pregunta}}</h1>
-  <button (click)="revisar(t.respuesta1,t.correcta)">{{t.respuesta1}}</button>
-  <button (click)="revisar(t.respuesta2,t.correcta)">{{t.respuesta2}}</button>
-  <button (click)="revisar(t.respuesta3,t.correcta)">{{t.respuesta3}}</button>
-  <button (click)="revisar(t.respuesta4,t.correcta)" >{{t.respuesta4}}</button>
+  <button  class="btn btn-outline-danger form-control m-2  btn-block" data-toggle="collapse" type="button" (click)="revisar(t.respuesta1,t.correcta)">{{t.respuesta1}}</button>
+  <button  class="btn btn-outline-danger form-control m-2  btn-block" data-toggle="collapse" type="button" (click)="revisar(t.respuesta2,t.correcta)">{{t.respuesta2}}</button>
+  <button class="btn btn-outline-danger form-control m-2  btn-block" data-toggle="collapse" type="button"(click)="revisar(t.respuesta3,t.correcta)">{{t.respuesta3}}</button>
+  <button  class="btn btn-outline-danger form-control m-2  btn-block" data-toggle="collapse" type="button" (click)="revisar(t.respuesta4,t.correcta)" >{{t.respuesta4}}</button>
 </div>
 
