agregado de modulos

--- a/src/app/component/dificultad/dificultad.component.css
+++ b/src/app/component/dificultad/dificultad.component.css
@@ -1,11 +1,5 @@
 .p{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 5px;
-  width: 10%;
-  height: 150%;
-
+  text-align: center;
 }
 .container{
   display: flex;
