--- a/src/app/component/navar/navar.component.html
+++ b/src/app/component/navar/navar.component.html
@@ -1,44 +1,30 @@
 <!DOCTYPE html>
-<html lang="en" >
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-</head>
-<body  >
-
-<nav class="navbar navbar-inverse navbar-expand-sm " data-toggle="collapse" >
-  <div class="container-fluid navbar-expand-sm  collapse navbar-collapse">
-    <div class="navbar-header">
-      <a class="navbar-brand aling-right">Learning Together</a>
-    </div>
-    <ul class="nav navbar-nav ">
-      <!-- <li class="active"><a href="#">Home</a></li> -->
-      <!-- <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Page 1 <span class="caret"></span></a>
-        <ul class="dropdown-menu">
-          <li><a href="#">Page 1-1</a></li>
-          <li><a href="#">Page 1-2</a></li>
-          <li><a href="#">Page 1-3</a></li>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
+    />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+  </head>
+  <body>
+    <nav class="navbar navbar-inverse navbar-expand-sm" data-toggle="collapse">
+      <div class="container-fluid navbar-expand-sm collapse navbar-collapse">
+        <div class="navbar-header">
+          <a class="navbar-brand aling-left">Learning Together</a>
+        </div>
+        <ul class="nav navbar-nav">
+          <button
+            data-toggle="collapse"
+            class="progressier-install-buttonbtn btn-primary btn-block"
+          >
+            Instalar
+          </button>
         </ul>
-      </li> --><button data-toggle="collapse" class="progressier-install-button btn btn-primary btn-block">Instalar</button>
-      <!-- <BUtton class="btn btn-primary btn-block">Instalar</BUtton> -->
-      <!-- <li><a href="#"></a></li> -->
-    </ul>
-    <ul class="nav navbar-nav navbar-right collapse navbar-collapse">
-      <li><a href="/register"><span class="glyphicon glyphicon-user"></span> Registro</a></li>
-      <li><a href="/login"><span class="glyphicon glyphicon-log-in"></span> Iniciar Sesion</a></li>
-    </ul>
-
-
-  </div>
-</nav>
-<!--
-<div class="container">
-  <h3>Right Aligned Navbar</h3>
-  <p>The .navbar-right class is used to right-align navigation bar buttons.</p>
-</div> -->
-
-</body>
+      </div>
+    </nav>
+  </body>
 </html>
