--- a/src/app/component/preguntas/preguntas.component.css
+++ b/src/app/component/preguntas/preguntas.component.css
@@ -1,8 +1,11 @@
-.p{
-  display: flex;
-  padding: 5px;
-  justify-content: center;
-  width: 100%;
-  height: 150%;
-
+img {
+  max-width: 100%;
+  height: auto;
+  width: auto\9; /* ie8 */
+}
+div{
+  text-align: center;
+}
+a{
+  margin: 5px;
 }
